--- a/web/index.html
+++ b/web/index.html
@@ -41,15 +41,18 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav pull-right">
                 <li>
-                    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+                    <div id="" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
                     <script>
+                        var id_token;
                         function onSignIn(googleUser) {
                             // Useful data for your client-side scripts:
-                            var profile = googleUser.getBasicProfile();
+                            id_token = googleUser.getAuthResponse().id_token;
+                            /*var profile = googleUser.getBasicProfile();
                             console.log("ID: " + profile.getId()); // Don't send this directly to your server!
                             console.log("Name: " + profile.getName());
                             console.log("Image URL: " + profile.getImageUrl());
-                            console.log("Email: " + profile.getEmail());
+                            console.log("Email: " + profile.getEmail());*/
+
 
                         };
                     </script>
