--- a/web/index.html
+++ b/web/index.html
@@ -61,8 +61,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Bienvenue !</h1>
+                <h1 class="section-heading">Welcome !</h1>
                 <p id="welcomeContent" class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                <p><a class="btn btn-primary" href="ha-search-screen.html" role="button">Search Training plan</a></p>
             </div>
         </div>
     </div>
