TOtal value time ok

--- a/web/ha-addTraining.html
+++ b/web/ha-addTraining.html
@@ -184,7 +184,9 @@
 <script>
     $(document).ready(function() { $("#e1").select2(); });
 </script>
+<script src="js/moment.min.js"></script>
 <script type="text/javascript" src="/js/addTrainingAJAX.js"></script>
+
 
 </body>
 </html>
