Bouton annulation reset Refresh en success

--- a/web/ha-addTraining.html
+++ b/web/ha-addTraining.html
@@ -20,20 +20,20 @@
 <nav class="navbar navbar-inverse" role="navigation">
     <div class=" col-md-10 col-sm-10 col-xs-10 ">
         <form class="navbar-form navbar-left"  style="width:100%" role="search">
-            <button type="submit" class="btn btn-link " style="margin:0px,padding:0px"><span class="glyphicon glyphicon-arrow-left "></span> </button>
+            <button type="button" class="btn btn-link " style="margin:0px,padding:0px"><span class="glyphicon glyphicon-arrow-left "></span> </button>
             <label> <h5 style="color:white"> Add a Training Plan</h5></label>
         </form>
     </div>
 
     <div class=" col-md-2 col-sm-2 col-xs-2 ">
         <form class="navbar-form navbar-left"  style="width:100%" role="search">
-            <button type="submit" class="btn btn-link"><span class="glyphicon glyphicon-user"></span> </button>
-            <button type="submit" class="btn btn-link"> <span class="glyphicon glyphicon-stats"></span> </button>
+            <button type="button" class="btn btn-link"><span class="glyphicon glyphicon-user"></span> </button>
+            <button type="button" class="btn btn-link"> <span class="glyphicon glyphicon-stats"></span> </button>
         </form>
     </div>
 </nav>
 <!-- ------------------------------------------- HEADER ZONE END ------------------------------------------- -->
-
+<form action="">
     <div class="row" style="margin-bottom:10px">
         <div class=" col-md-1 col-sm-0 col-xs-0 " ></div>
         <div class=" col-md-2 col-sm-2 col-xs-12 ">
@@ -159,11 +159,11 @@
     <div class=" col-md-2 ol-sm-0 col-xs-0 " ></div>
     <div class=" col-md-10 ol-sm-5 col-xs-0 " ></div>
     <div class=" col-md-2 ol-sm-5 col-xs-12 text-center" >
-        <button class="btn btn-danger btn-sm"> <span class="glyphicon glyphicon-remove"></span> </button>
-        <button id="trainingSubmit" class="btn btn-success btn-lg"> <span class="glyphicon glyphicon-ok"></span> </button>
+        <button type="submit" class="btn btn-danger btn-sm"> <span class="glyphicon glyphicon-remove"></span> </button>
+        <button type="button" id="trainingSubmit" class="btn btn-success btn-lg"> <span class="glyphicon glyphicon-ok"></span> </button>
     </div>
 
-
+</form>
 
 <!-- ------------------------------------------- FOOTER ZONE ------------------------------------------- -->
 <!-- <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
