--- a/web/ha-search-screen.html
+++ b/web/ha-search-screen.html
@@ -32,10 +32,10 @@
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <div class="col-sm-3 col-md-3">
-                <form class="navbar-form" role="search">
+            <div id="search-bar" class="col-sm-3 col-md-3">
+                <form class="navbar-form" role="search" method="get" action="ha-result-screen.html">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search" name="q">
+                        <input id="search-field" type="text" class="form-control" placeholder="Search" name="q">
                         <div class="input-group-btn">
                             <button id="search-button" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
@@ -132,7 +132,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
     <div class=" col-md-10 col-sm-10 col-xs-10 ">
         <form class="navbar-form navbar-left" style="width:100%" role="search">
-            <button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-plus-sign"></span></button>
+           <a href="ha-addTraining.html" role="button" type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-plus-sign"></span></a>
             <label style="color:white">Add a Training Plan</label>
         </form>
     </div>
@@ -141,6 +141,8 @@
 
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/underscore.min.js"></script>
 <script src="js/navbarAjax.js"></script>
+<script src="js/searchAjax.js"></script>
 </body>
 </html>
