--- a/web/ha-training-plans.html
+++ b/web/ha-training-plans.html
@@ -21,15 +21,20 @@
 <nav class="navbar navbar-inverse" role="navigation">
     <div class=" col-md-10 col-sm-10 col-xs-10 ">
         <form class="navbar-form navbar-left"  style="width:100%" role="search">
-            <button type="submit" class="btn btn-link " style="margin:0px,padding:0px"><span class="glyphicon glyphicon-arrow-left "></span> </button>
+            <button type="submit" class="btn btn-link " style="margin:0px;padding:0px"><span class="glyphicon glyphicon-arrow-left "></span> </button>
             <label> <h5 style="color:white"> Add a Training Plan</h5></label>
         </form>
     </div>
 
     <div class=" col-md-2 col-sm-2 col-xs-2 ">
+        <ul id="navbar-list" class="nav navbar-nav pull-right">
+            <li>
+                <div id="google-button" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+            </li>
+        </ul>
         <form class="navbar-form navbar-left"  style="width:100%" role="search">
-            <button type="submit" class="btn btn-link"><span class="glyphicon glyphicon-user"></span> </button>
-            <button type="submit" class="btn btn-link"> <span class="glyphicon glyphicon-stats"></span> </button>
+            <button type="button" class="btn btn-link"><span class="glyphicon glyphicon-user"></span> </button>
+            <button type="button" class="btn btn-link"> <span class="glyphicon glyphicon-stats"></span> </button>
         </form>
     </div>
 </nav>
@@ -61,6 +66,7 @@
 <script src="js/jquery-1.11.1.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+<script src="js/userPlansAjax.js"></script>
 
 </body>
 </html>
