--- a/web/ha-addTraining.html
+++ b/web/ha-addTraining.html
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-inverse" role="navigation">
     <div class=" col-md-10 col-sm-10 col-xs-10 ">
         <form class="navbar-form navbar-left"  style="width:100%" role="search">
-            <button type="submit" class="btn btn-link " style="margin:0px;padding:0px"><span class="glyphicon glyphicon-arrow-left "></span> </button>
+            <a href="ha-search-screen.html" class="btn btn-link " style="margin:0px;padding:0px"><span class="glyphicon glyphicon-arrow-left "></span> </a>
             <label> <h5 style="color:white"> Add a Training Plan</h5></label>
         </form>
     </div>
