--- a/web/ha-result-detail-screen.html
+++ b/web/ha-result-detail-screen.html
@@ -39,8 +39,8 @@
      <form>     
             <div class=" col-md-1 col-sm-0 col-xs-0 " ></div>     
         <div class=" col-md-11 col-sm-12 col-xs-12 " >
-                <table class="table table-striped table-condensed">
-                    <tr>
+                <table id="table-exercise" class="table table-striped table-condensed">
+                    <!--<tr>
                         <td class=" col-md-12 col-sm-12 col-xs-12">
                         <div class="row">
                             <div class=" col-md-3 col-sm-12 col-xs-12 ">
@@ -154,7 +154,7 @@
                                 <button type="submit" class="btn btn-danger btn-sm" disabled="disabled"> <span class="glyphicon glyphicon-fast-forward"></span> </button>
                             </div>
                         </td>
-                    </tr>
+                    </tr>-->
                       
                 </table>
              </div>
@@ -221,6 +221,10 @@
                 }});
         });
     </script>
+      <script src="js/underscore.min.js"></script>
+
+      <script src="js/navbarAjax.js"></script>
+    <script src="js/detailAjax.js"></script>
              
   </body>
 </html>
