--- a/web/ha-result-screen.html
+++ b/web/ha-result-screen.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="418187800373-a5n7urf2liqa6uahdadtj75oq5k2q3up.apps.googleusercontent.com">
+    <title>Search result</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/js.css" rel="stylesheet">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
 </head>
@@ -27,7 +30,11 @@
 
     <div class=" col-md-2 col-sm-2 col-xs-2 ">
         <form class="navbar-form navbar-left" style="width:100%" role="search">
-            <button type="submit" class="btn btn-link"><span class="glyphicon glyphicon-user"></span></button>
+            <ul id="navbar-list" class="nav navbar-nav pull-right">
+                <li>
+                    <div id="google-button" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+                </li>
+            </ul>
             <button type="submit" class="btn btn-link"><span class="glyphicon glyphicon-stats"></span></button>
         </form>
     </div>
@@ -97,7 +104,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
     <div class=" col-md-10 col-sm-10 col-xs-10 ">
         <form class="navbar-form navbar-left" style="width:100%" role="search">
-            <button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-plus-sign"></span></button>
+            <a href="ha-addTraining.html" class="btn btn-danger"><span class="glyphicon glyphicon-plus-sign"></span></a>
             <label style="color:white">Add a Training Plan</label>
         </form>
     </div>
