--- a/web/ha-result-screen.html
+++ b/web/ha-result-screen.html
@@ -115,6 +115,7 @@
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/underscore.min.js"></script>
+<script src="js/moment.min.js"></script>
 <script src="js/navbarAjax.js"></script>
 <script src="js/searchAjax.js"></script>
 </body>
