plus de sécu et ajout schéma fonctionnel

--- a/web/ha-search-screen.html
+++ b/web/ha-search-screen.html
@@ -33,7 +33,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <div id="search-bar" class="col-sm-3 col-md-3">
-                <form class="navbar-form" role="search" method="get" action="ha-result-screen.html">
+                <form id="search-form" class="navbar-form" role="search" method="get" action="ha-result-screen.html">
                     <div class="input-group">
                         <input id="search-field" type="text" class="form-control" placeholder="Search" name="q">
                         <div class="input-group-btn">
