--- a/web/ha-result-screen.html
+++ b/web/ha-result-screen.html
@@ -20,10 +20,10 @@
 <!-- ------------------------------------------- HEADER ZONE ------------------------------------------- -->
 <nav class="navbar navbar-inverse" role="navigation">
     <div class=" col-md-10 col-sm-10 col-xs-10 ">
-        <form class="navbar-form navbar-left" style="width:100%" role="search" method="get" action="ha-result-screen.html">
+        <form id="search-form" class="navbar-form navbar-left" style="width:100%" role="search" method="get" action="ha-result-screen.html">
             <button type="submit" class="btn btn-default">Search</button>
             <div class="form-group" style="width:90%">
-                <input type="text" name="q" style="width:100%" class="form-control" placeholder="Search">
+                <input id="search-field" type="text" name="q" style="width:100%" class="form-control" placeholder="Search">
             </div>
         </form>
     </div>
